--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.4.0",
+    "@adonisjs/lucid": "^16.3.1",
     "@adonisjs/repl": "^3.1.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
