--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-agendamento-cadastro-unico",
+  "name": "fitit",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^5.3.8",
+    "@adonisjs/assembler": "^5.0.0",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -23,9 +23,15 @@
     "youch-terminal": "^1.1.1"
   },
   "dependencies": {
-    "@adonisjs/core": "^5.4.0",
-    "@adonisjs/lucid": "^16.3.1",
-    "@adonisjs/repl": "^3.1.7",
+    "@adonisjs/auth": "^8.0.10",
+    "@adonisjs/core": "^5.3.0",
+    "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/mail": "^7.2.4",
+    "@adonisjs/repl": "^3.1.0",
+    "date-fns": "^2.25.0",
+    "luxon": "^2.1.1",
+    "pg": "^8.7.1",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.20"
